@@ -1,19 +1,11 @@
 package www.raven.jc.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import javax.servlet.http.HttpServletRequest;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
-import org.bson.types.ObjectId;
 import org.redisson.api.RScoredSortedSet;
 import org.redisson.api.RedissonClient;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import www.raven.jc.api.UserRpcService;
 import www.raven.jc.constant.OfflineMessagesConstant;
@@ -26,10 +18,20 @@ import www.raven.jc.entity.po.FriendChat;
 import www.raven.jc.entity.po.Message;
 import www.raven.jc.entity.vo.MessageVO;
 import www.raven.jc.entity.vo.UserFriendVO;
+import www.raven.jc.result.RpcResult;
 import www.raven.jc.service.FriendService;
 import www.raven.jc.util.JsonUtil;
-import www.raven.jc.util.MongoUtil;
+import www.raven.jc.util.MessageUtil;
 import www.raven.jc.util.RequestUtil;
+
+import jakarta.servlet.http.HttpServletRequest;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * friend service impl
@@ -40,16 +42,17 @@ import www.raven.jc.util.RequestUtil;
 @Service
 @Slf4j
 public class FriendServiceImpl implements FriendService {
-    @Autowired
+    @Resource
     private HttpServletRequest request;
-    @Autowired
+    @Resource
     private FriendChatDAO friendChatDAO;
-    @Autowired
+    @Resource
     private MessageDAO messageDAO;
-    @Autowired
+    @Resource
     private UserRpcService userRpcService;
-    @Autowired
+    @Resource
     private RedissonClient redissonClient;
+
     @Override
     public List<UserFriendVO> initUserFriendPage() {
         int userId = RequestUtil.getUserId(request);
@@ -58,58 +61,66 @@ public class FriendServiceImpl implements FriendService {
         if (friends.isEmpty()) {
             return new ArrayList<>();
         }
-        List<Integer> ids = friends.stream().map(UserInfoDTO::getUserId).collect(Collectors.toList());
+        List<Integer> ids = friends.stream().map(UserInfoDTO::getUserId).toList();
         List<String> fixedFriendIds = new ArrayList<>();
         for (Integer friendId : ids) {
-            fixedFriendIds.add(MongoUtil.concatenateIds(userId, friendId));
+            fixedFriendIds.add(MessageUtil.concatenateIds(userId, friendId));
         }
         List<FriendChat> friendChats = friendChatDAO.getBaseMapper().selectList(new QueryWrapper<FriendChat>().in("fix_id", fixedFriendIds));
         //获取好友的最后一条消息id
-        List<ObjectId> idsMsg = friendChats.stream()
-            .map(chat -> new ObjectId(chat.getLastMsgId()))
-            .collect(Collectors.toList());
+        List<String> idsMsg = friendChats.stream().map(FriendChat::getLastMsgId).collect(Collectors.toList());
         //获取好友的最后一条消息
-        List<Message> messages = messageDAO.getBatchIds(idsMsg);
+        List<Message> messages = idsMsg.isEmpty()?new ArrayList<>():messageDAO.getBaseMapper().selectList(new QueryWrapper<Message>().in("id", idsMsg));
+
+
         //将好友id和好友的最后一条消息id对应起来
         Map<Integer, Message> messageMap = messages.stream()
-            .collect(Collectors.toMap(
-                message -> message.getSender().getUserId().equals(userId) ? MongoUtil.resolve(message.getReceiverId(), userId) : message.getSender().getUserId(),
-                Function.identity(),
-                (oldValue, newValue) -> newValue
-            ));
+                .collect(Collectors.toMap(
+                        message -> message.getSenderId().equals(userId) ? MessageUtil.resolve(message.getReceiverId(), userId) : message.getSenderId(),
+                        Function.identity(),
+                        (oldValue, newValue) -> newValue
+                ));
         return friends.stream().map(friend -> {
             Message message = messageMap.get(friend.getUserId());
             return new UserFriendVO()
-                .setFriendId(friend.getUserId())
-                .setFriendName(friend.getUsername())
-                .setFriendProfile(friend.getProfile())
-                .setLastMsg(message == null ? "" : JsonUtil.objToJson(message))
-                .setLastMsgSender(message == null ? "" : message.getSender().getUserId().equals(userId) ? "我" : friend.getUsername());
+                    .setFriendId(friend.getUserId())
+                    .setFriendName(friend.getUsername())
+                    .setFriendProfile(friend.getProfile())
+                    .setLastMsg(message == null ? "" : JsonUtil.objToJson(message))
+                    .setLastMsgSender(message == null ? "" : message.getSenderId().equals(userId) ? "我" : friend.getUsername());
         }).collect(Collectors.toList());
     }
 
     @Override
     public List<MessageVO> getFriendMsgPages(PagesFriendMsgModel model) {
         int userId = RequestUtil.getUserId(request);
-        String fixId = MongoUtil.concatenateIds(userId, model.getFriendId());
-        List<Message> messages = messageDAO.getMsgWithPagination(fixId, "friend", PageRequest.of(model.getPage(), model.getSize())).getContent();
-        return messages.stream().map(MessageVO::new).collect(Collectors.toList());
+        String fixId = MessageUtil.concatenateIds(userId, model.getFriendId());
+        Page<Message> messagePage = messageDAO.getBaseMapper().selectPage(new Page<>(model.getPage(), model.getSize()), new QueryWrapper<Message>().eq("fix_id", fixId).orderByDesc("timestamp").last("limit 10"));
+        RpcResult<List<UserInfoDTO>> batchInfo = userRpcService.getBatchInfo(List.of(model.getFriendId(), userId));
+        Map<Integer, UserInfoDTO> map = batchInfo.getData().stream().collect(Collectors.toMap(UserInfoDTO::getUserId, Function.identity()));
+        return messagePage.getRecords().stream().map(message -> {
+            UserInfoDTO user = map.get(message.getSenderId());
+            return new MessageVO(message,user);
+        }).collect(Collectors.toList());
     }
 
     @Override
     public List<MessageVO> getLatestFriendMsg(LatestFriendMsgModel model) {
         int userId = RequestUtil.getUserId(request);
-        RScoredSortedSet<MessageVO> scoredSortedSet = redissonClient.getScoredSortedSet(OfflineMessagesConstant.PREFIX + userId);
-        Collection<MessageVO> messages = scoredSortedSet.readAll();
+        RScoredSortedSet<Message> scoredSortedSet = redissonClient.getScoredSortedSet(OfflineMessagesConstant.PREFIX + userId);
+        Collection<Message> messages = scoredSortedSet.readAll();
         //获取所有id=roomId的消息
+        RpcResult<List<UserInfoDTO>> batchInfo = userRpcService.getBatchInfo(List.of(model.getFriendId(), userId));
+        Map<Integer, UserInfoDTO> map = batchInfo.getData().stream().collect(Collectors.toMap(UserInfoDTO::getUserId, Function.identity()));
         List<MessageVO> collect = new ArrayList<>();
-        for (MessageVO message : messages) {
-            if (message.getBelongId().equals(model.getFriendId())) {
-                collect.add(message);
-                //删除已经获取的离线消息
-                scoredSortedSet.remove(message);
+        for (Message message : messages) {
+            if (Objects.equals(message.getReceiverId(), String.valueOf(model.getFriendId()))) {
+                UserInfoDTO user = map.get(message.getSenderId());
+                collect.add(new MessageVO(message,user));
             }
         }
+        //删除已经获取的离线消息
+        scoredSortedSet.removeAll(messages);
         return collect;
     }
 
